--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
 		"@nextui-org/theme": "2.2.5",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@types/mapbox-gl": "^3.1.0",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"leaflet": "^1.9.4",
+		"mapbox-gl": "^3.5.1",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-leaflet": "^4.2.1",
+		"react-map-gl": "^7.1.7"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
