--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.34",
+		"@nextui-org/card": "^2.0.31",
 		"@nextui-org/code": "2.0.29",
+		"@nextui-org/divider": "^2.0.28",
+		"@nextui-org/image": "^2.0.29",
 		"@nextui-org/input": "2.2.2",
 		"@nextui-org/kbd": "2.0.30",
 		"@nextui-org/link": "2.0.32",
@@ -33,7 +36,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-leaflet": "^4.2.1",
-		"react-map-gl": "^7.1.7"
+		"react-map-gl": "^7.1.7",
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
