--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "@nextui-org/avatar": "^2.0.30",
     "@nextui-org/button": "2.0.34",
     "@nextui-org/card": "^2.0.31",
@@ -45,6 +46,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
