--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nextui-org/listbox": "2.1.22",
     "@nextui-org/navbar": "2.0.33",
     "@nextui-org/popover": "^2.1.24",
+    "@nextui-org/skeleton": "^2.0.29",
     "@nextui-org/snippet": "2.0.38",
     "@nextui-org/switch": "2.0.31",
     "@nextui-org/system": "2.2.1",
