--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@nextui-org/kbd": "2.0.30",
     "@nextui-org/link": "2.0.32",
     "@nextui-org/listbox": "2.1.22",
+    "@nextui-org/modal": "^2.0.36",
     "@nextui-org/navbar": "2.0.33",
     "@nextui-org/popover": "^2.1.24",
+    "@nextui-org/progress": "^2.0.31",
+    "@nextui-org/scroll-shadow": "^2.1.17",
     "@nextui-org/skeleton": "^2.0.29",
     "@nextui-org/snippet": "2.0.38",
     "@nextui-org/switch": "2.0.31",
     "@nextui-org/system": "2.2.1",
+    "@nextui-org/table": "^2.0.36",
     "@nextui-org/theme": "2.2.5",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
