changed avatar, fixed error, working on updating stats

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
-    "@nextui-org/avatar": "^2.0.30",
+    "@nextui-org/avatar": "0.0.0-canary-20240616172522",
     "@nextui-org/button": "2.0.34",
     "@nextui-org/card": "^2.0.31",
     "@nextui-org/code": "2.0.29",
