--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.7.2",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
+    "geojson": "^0.5.0",
     "intl-messageformat": "^10.5.0",
     "mapbox-gl": "^3.5.1",
     "next": "14.2.4",
