--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "geojson": "^0.5.0",
+    "hls.js": "^1.5.13",
     "intl-messageformat": "^10.5.0",
     "mapbox-gl": "^3.5.1",
     "next": "14.2.4",
