--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mapbox-gl": "^3.5.1",
     "next": "14.2.4",
     "next-themes": "^0.2.1",
+    "query-string": "^9.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
